--- a/packages/custom/getName/public/assets/css/getName.css
+++ b/packages/custom/getName/public/assets/css/getName.css
@@ -1,3 +1,11 @@
 .getName-example h1 {
   background-color: purple
 }
+
+.ng-invalid.ng-dirty {
+  border-color: #FA787E;
+}
+
+.ng-valid.ng-dirty {
+  border-color: #78FA89;
+}
