--- a/packages/custom/getName/public/views/index.html
+++ b/packages/custom/getName/public/views/index.html
@@ -1,27 +1,15 @@
-<div class="" data-ng-controller="GetNameController">
-  <h1>Example view from your new awesome package</h1>
-  <h2>Package: {{package.name}}</h2>
-  <ol>
-    <li>
-      <a href="/api/getName/example/anyone" target="_self">Server route that anyone can access</a>
-    </li>
-    <li>
-      <a href="/api/getName/example/auth" target="_self">Server route that requires authentication</a>
-    </li>
-    <li>
-      <a href="/api/getName/example/admin" target="_self">Server route that requires admin user</a>
-    </li>
-    <li>
-      <a href="/api/getName/example/render" target="_self">Raw Html rendering example from using swig</a>
-    </li>
-  </ol>
-  <h3><img src="/getName/assets/img/logo.png" /></h3>
-  </br>
-  <p class="alert alert-info">You can find your package in /packages/getName</p>
-  </br>
-  <p class="alert alert-warning">MEAN versions prior to 0.3.2 will be in /node_modules/getName</p>
-  </br>
-  <h3><a href="http://learn.mean.io">Documentation</a></h3>
-  </br>
-</div>
+<form name="frmShowMessageName" ng-controller="GetNameController"
+      ng-submit="frmShowMessageName.$valid && showMessage(user)" novalidate>
+  <div class="form-group">
+    <label for="inputName">Insert your name:</label>
+    <input type="text" class="form-control" id="inputName" ng-model="user.name" required/>
+  </div>
+
+  <input type="submit" class="btn btn-default btn-sm" value="show"/>
+
+  <div class="form-group">
+    <br><label for="inputName">{{user.data.message}}</label>
+  </div>
+
+</form>
 
